--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@mediapipe/pose": "^0.5.1675469404",
     "@react-three/drei": "^9.105.0",
     "@react-three/fiber": "^8.16.0",
     "@tensorflow-models/pose-detection": "^2.1.3",
     "@tensorflow/tfjs": "^4.15.0",
+    "@tensorflow/tfjs-backend-webgpu": "^4.22.0",
     "next": "^14.2.0",
     "phaser": "^3.80.1",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
+    "recharts": "^3.4.1",
+    "snowflake-sdk": "^2.3.1",
     "three": "^0.162.0",
     "zustand": "^4.5.0"
   },
